# aigenis-bond

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CRYPTO_PAYMENT_MIGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RU.md  Dockerfile  GUIDE_RU.md  LICENSE  Makefile  PLAN.md  README.md  alembic.ini  conftest.py  crypto_gateway_config.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_decimal.py  test_decimal2.py  verify_aigenis.py  verify_report.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_v2.py  0003_v3.py  0004_v4.py  0005_bond_extra_fields.py  0005_peer_set.py  0006_bond_extra_fields_2.py  0006_merge_heads.py  0007_merge_heads_2.py  0008_alert_rules.py  0009_issuer_logo.py  0010_companies.py  0011_is_government.py  0012_partner_api.py  0013_referral.py  0014_partner_referral.py  0015_partner_lead.py  0016_partner_lead_key.py  0017_portfolio_phase2.py  a1b2c3d4e5f0_add_telegram_id_to_users.py  b2c3d4e5f6a1_add_subscription_expiry.py  c845972200a0_add_subscriptions_table.py  d4e5f6a1b2c3_add_trial_end.py  e5728dab810f_add_users_table.py  e5f6a1b2c3d4_add_password_reset_token.py  f6a1b2c3d4e5_add_yookassa_payment_id.py
api/: _helpers.py  access_control.py  analytics.py  document_analysis.py  i18n.py  main.py  nlp.py  portfolio_api.py  pricing.py  reports.py  seo.py  stocks.py  widget.py
api/admin/: router.py
api/admin/templates/: base.html  dashboard.html  login.html  users.html
api/auth/: deps.py  router.py  schemas.py  service.py
api/billing/: __init__.py  router.py  schemas.py  service.py
api/crypto/: router.py  service.py
api/notifications/: email.py  reminders.py
api/partner/: __init__.py  router.py  security.py  webhooks.py
desk/: __init__.py  carry.py  cashflow.py  duration.py  models.py  relative_value.py  repo.py  repository.py  stress.py  yield_curve.py
docker/grafana/dashboards/: aigenis-overview.json
docker/prometheus/: prometheus.yml
docs/sales/: cmo_audit.md  gtm_launch.md  one_pager.md  outreach_template.md  target_list.csv  teaser.md
forecast/: __init__.py  engine.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  robots.txt  sitemap.xml  sw.js
frontend/src/: App.tsx  BondFilters.tsx  LandingPage.tsx  LegalPages.tsx  OnboardingFlow.tsx  OnboardingTour.tsx  PaywallModal.tsx  WidgetPage.tsx  i18n.tsx  index.css
frontend/src/components/: AIChatModal.tsx  BacktestPanel.tsx  BondCardView.tsx  BondDetailModal.tsx  BottomNav.tsx  CompanyPage.tsx  DocumentAnalysis.tsx  MobileBottomSheet.tsx  (+14 more)
ml/: __init__.py  engine.py  features.py  models.py  registry.py  repository.py
ml/artifacts/: buy_classifier_20260618154359.pkl  buy_classifier_20260618210226.pkl  buy_classifier_20260620171437.pkl  ytm_regressor_20260618154359.pkl  ytm_regressor_20260619080304.pkl  ytm_regressor_20260625202549.pkl
monitoring/: __init__.py  engine.py  metrics.py
notifications/: __init__.py  alerts_repository.py  alerts_service.py  delivery.py  fx_repository.py  repository.py
portfolio/: __init__.py  backtest.py  income.py  optimizer.py  pnl.py  positions_repository.py  rebalance.py  scenarios.py  transactions.py
recommendations/: __init__.py  engine.py
scoring/: __init__.py  disclaimer.py  engine.py  explain.py  models.py  repository.py
scraper/: __init__.py  __main__.py  client.py  commands.py  commands_v3.py  commands_v4.py  config.py  db.py  errors.py  fallback_source.py  fx.py  health.py  logging.py  models.py  moex.py  moex_stocks.py  observability.py  orm.py  pipeline.py  redis_client.py  scheduler.py  scheduler_v3.py  scheduler_v4.py  validation.py
scraper/api/: __init__.py  detail.py  history.py  listing.py
scraper/parsers/: __init__.py  detail.py  history.py  listing.py  xlsx.py
scraper/repositories/: __init__.py  bonds.py  history.py  stocks.py
scripts/: generate_secrets.py  seed_companies.py
telegram_bot/: __init__.py  _bot_instance.py  _cmd_helpers.py  admin.py  bond_picker.py  bot.py  commands.py  handler_state.py  handlers.py  helpers.py  menus.py  metrics.py  middleware.py  positions.py  preferences_repository.py  settings.py  stars_payments.py  subscriptions.py
tests/: conftest.py  test_access_control_pricing.py  test_account_status.py  test_alert_delivery.py  test_alerts_and_allocate.py  test_analytics_http.py  test_api_access.py  test_api_endpoints.py  test_api_parsers.py  test_auth.py  test_billing_webhook.py  test_bond_card.py  test_bond_picker_actions.py  test_cashflow.py  test_client_mock.py  test_companies_http.py  test_config.py  test_data_quality.py  test_data_source_health.py  test_db.py  test_desk.py  test_dom_parsers.py  test_errors.py  test_forecast.py  test_history_api.py  test_income.py  test_metrics.py  test_ml.py  test_ml_backtest.py  test_ml_features.py  test_ml_registry.py  test_ml_training.py  test_models.py  test_moex.py  test_monitoring.py  test_observability.py  test_partner_api.py  test_personal_portfolio.py  test_portfolio.py  test_portfolio_optimizer.py  (+12 more)
tests/fixtures/: detail.html  detail.json  history.json  listing.html  listing.json
tests/load/: locustfile.py  test_server_load.py
visualization/: __init__.py  charts.py
(+14 files in other folders)
