[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigenis-parser"
version = "3.0.0"
description = "Bond Fixed Income Assistant — Production-grade scraper & analytics platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "LicenseRef-Proprietary" }
authors = [{ name = "Aigenis Parser" }]
keywords = ["bonds", "fixed-income", "scraper", "analytics", "belarus"]

dependencies = [
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "apscheduler>=3.10.4",
    "tenacity>=9.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.0",
    "aiogram>=3.13.0",
    "matplotlib>=3.9.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiohttp>=3.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "prometheus-client>=0.21.0",
    "yookassa>=3.4.1",
]

[project.optional-dependencies]
prod = [
    "sentry-sdk>=2.18.0",
    "gunicorn>=23.0.0",
]

[project.scripts]
aigenis-parser = "scraper.__main__:main"
aigenis-bot = "telegram_bot.bot:cli"
aigenis-api = "api.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "scraper*", "desk*", "forecast*", "ml*", "monitoring*",
    "notifications*", "portfolio*", "recommendations*",
    "scoring*", "telegram_bot*", "visualization*", "api*",
    "api/auth*", "api/billing*", "api/admin*",
    "api/admin/templates/*",
]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ASYNC", "SIM", "ARG", "C4", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.per-file-ignores]
# The Telegram bot's UI strings are intentionally in Russian (Cyrillic).
"telegram_bot/**" = ["RUF001"]

fixable = ["I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
ignore_missing_imports = true
files = [
    "scraper", "desk", "forecast", "ml", "monitoring",
    "notifications", "portfolio", "recommendations",
    "scoring", "telegram_bot", "visualization", "api",
]

[[tool.mypy.overrides]]
module = "scraper.models"
strict = true

[[tool.mypy.overrides]]
module = "scraper.repositories.*"
strict = true

[[tool.mypy.overrides]]
module = "scraper.config"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

